# Opti-RCA-multi-agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  PRD.md  README.md  backend_optimize.md  demo.py  docker-compose.yml  fronted_design.md  graph_construction.md  main.py  nginx.conf  process_and_module.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
frontend/: .gitignore  Dockerfile  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/public/: favicon.txt
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AgentPipeline.tsx  AuditCard.tsx  BuildProgressCard.tsx  CommunityCard.tsx  DetailDrawer.tsx  EvidenceTable.tsx  GraphCanvas.tsx  KnowledgeDocUploader.tsx  KnowledgeDocumentList.tsx  KnowledgeGraph.tsx  MiniSubgraph.tsx  PipelineNode.tsx  RuleCard.tsx  SessionList.tsx  UploadZone.tsx
frontend/src/hooks/: useSSE.ts
frontend/src/lib/: api.ts  types.ts
frontend/src/store/: sessionStore.ts
raw_knowledge_files/: general_alarms.txt
src/omniops/: __init__.py
src/omniops.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/omniops/agents/: __init__.py  base.py  diagnosis.py  impact.py  perception.py  planning.py  verification.py
src/omniops/api/: main.py  routes.py
src/omniops/consumers/: __init__.py  closure_consumer.py  impact_consumer.py  (+4 more)
tests/: __init__.py  conftest.py
tests/integration/: test_api.py  test_db_store.py
tests/unit/: test_agents.py  test_alarm_parsing.py  test_context_router.py  test_csv_parser.py  test_events.py  test_memory_store.py  test_providers.py  test_state_machine.py
tools/: __init__.py  registry.yaml  test_e2e_dbs.py
tools/migrations/: 001_init.sql  002_add_topology_fields.sql  run.py
(+59 files in other folders)
