[project]
name = "omniops"
version = "0.1.0"
description = "OmniOps — 结构化数据驱动的智能诊断与建议系统"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "redis>=5.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "anthropic>=0.21.0",
    "python-jose[cryptography]>=3.3.0",
    "structlog>=23.0.0",
    "httpx>=0.25.0",
    "tenacity>=8.2.0",
    "python-dateutil>=2.8.0",
    "chardet>=5.2.0",
    "loguru>=0.7.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.1",
    "aio-pika>=9.0.0",
]

[project.optional-dependencies]
ocr = [
    "paddlepaddle>=2.5.0",
    "paddleocr>=2.7.0",
    "pillow>=10.0.0",
    "pdf2image>=1.16.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
    "types-python-dateutil",
    "types-redis",
    "types-PyYAML",
]

[project.scripts]
omniops = "omniops.api.main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
